# needle

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  needle.cdx.json  sbom.spdx.json  windows.mk
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
doc/: INSTRUCTIONS.md  INSTRUCTIONS_JP.md
docker/: Makefile  base.dockerfile  linux.dockerfile  shader.dockerfile  windows.dockerfile
lib/needle-core/: Cargo.toml
lib/needle-core/src/: app_base.rs  lib.rs
lib/needle-core/src/device/: debug.rs  mod.rs  query_family.rs  surface.rs
lib/needle-core/src/info/: mod.rs
lib/needle-core/src/pipeline/: config.rs  mod.rs  vertex.rs
lib/needle-core/src/renderer/: mod.rs
lib/needle-core/src/swapchain/: mod.rs
lib/needle-core/src/window/: mod.rs
makefiles/: docker.mk  docs.mk  license.mk  linux.mk  shader.mk  windows.mk
needle-core/: Cargo.toml
needle-core/src/: error.rs  lib.rs  texture.rs  time.rs
needle-core/src/app/: config.rs  mod.rs
needle-core/src/base/: mod.rs
needle-core/src/buffers/: background.rs  vertex.rs
needle-core/src/config/: fps.rs  mod.rs  position.rs  text.rs  time.rs
needle-core/src/renderer/: mod.rs  shader.rs  text.rs
shaders/: fs_main.wgsl  shader.frag  shader.vert  vs_main.wgsl
shaders/spv/: shader.frag.spv  shader.vert.spv
src/: app.rs  app_base.rs  main.rs  needle.rs  options.rs
src/needle/: base.rs  imgui.rs  mod.rs  mode.rs
