[package]
authors = ["bonohub13"]
name = "needle"
version = "0.2.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.39"
env_logger = "0.11.5"
imgui = { version = "0.12.0", features = [] }
imgui-wgpu = "0.25.0"
imgui-winit-support = "0.13.0"
log = "0.4.22"
needle-core = { git = "https://github.com/bonohub13/needle-core", tag="0.1.15" }
pollster = "0.4.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
wgpu = "25.0.0"
winit = { version = "0.30"}

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["wincon"]}
