[package]
authors = ["bonohub13"]
name = "needle"
version = "0.2.2"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5.42", features = ["derive"] }
env_logger = "0.11"
font-loader = "0.11"
imgui = { version = "0.12", features = [] }
log = "0.4"
needle-core = { git = "https://github.com/bonohub13/needle-core", branch="develop" }
pollster = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
wgpu = "25.0"
winit = { version = "0.30"}

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["wincon"]}
