[package]
name = "needle-core"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
directories = "5.0.1"
env_logger = "0.11.5"
glyphon = "0.7.0"
log = "0.4.22"
pollster = "0.4.0"
serde = {version = "1.0.215", features = ["derive"]}
toml = "0.8.19"
wgpu = "23.0.0"
winit = { version = "0.29", features = ["rwh_05"] }
