[package]
name = "needle-core"
version = "0.1.7"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bytemuck = "1.20.0"
chrono = "0.4.38"
directories = "5.0.1"
env_logger = "0.11.5"
glyphon = "0.7.0"
log = "0.4.22"
pollster = "0.4.0"
serde = {version = "1.0.215", features = ["derive"]}
toml = "0.8.19"
wgpu = {version = "23.0.0", features = ["spirv"]}
winit = { version = "0.30" }
